[project]
name = "expanses-tracker-tbot"
version = "0.1.0"
description = "Expanses tracker telegram bot"
authors = [
    {name = "Alessandro Giacche",email = "alessandrogiacche@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.3,<23.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "expanses_tracker_tbot", from = "src"}]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
